--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -117,8 +117,8 @@ only_rules:
   - unused_optional_binding
   - unused_setter_value
   - vertical_whitespace
-  - vertical_whitespace_closing_braces
-  - vertical_whitespace_opening_braces
+  # - vertical_whitespace_closing_braces
+  # - vertical_whitespace_opening_braces
   - void_return
   - xct_specific_matcher
   - yoda_condition
