--- a/SwiftTestAlfire/Info.plist
+++ b/SwiftTestAlfire/Info.plist
@@ -68,5 +68,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>是否允许App使用您的蓝牙?</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>是否允许App使用您的蓝牙?</string>
 </dict>
 </plist>
